Added Profile functionality

--- a/BauJo/BauJo/templates/key.html
+++ b/BauJo/BauJo/templates/key.html
@@ -23,7 +23,6 @@
 
 </ul>
 
-<button align = "center" href = "{% url 'new_key' %}">Add New Key</button>
-
+<a href = "{% url 'new_key' %}"><button>Add New Key</button></a>
 
 {% endblock %}
